# atlasfx

./: .env.example  .gitignore  DECISIONS.md  DEV_NOTES.md  NEXT_STEPS.md  README.md  vercel.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/ml/: news_sentiment.py  risk_classifier.py
apps/api/app/models/: countries.py
apps/api/app/routes/: fx.py  macro.py  model.py  news.py  rankings.py  risk.py  system.py
apps/api/app/schemas/: macro.py  ml.py  news.py  risk.py  system.py
apps/api/app/services/: fx.py  live_fx_risk.py  macro.py  mock_data.py  news.py  readiness.py  risk_builder.py  scoring.py
apps/api/scripts/: backtest.py  build_features.py  fetch_fx_rates.py  fetch_macro_data.py  fetch_news_signals.py  train_model.py
apps/api/tests/: test_live_fx_risk.py  test_macro.py  test_news_sentiment.py  test_readiness.py  test_risk_classifier.py  test_scoring.py
apps/web/: README.md  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/components/: app-loading-screen.tsx  country-detail-client.tsx  dashboard-client.tsx  data-boot-gate.tsx  metric-panel.tsx  money-weather-map.tsx  rankings-table.tsx  risk-badge.tsx  risk-charts.tsx  site-shell.tsx
apps/web/src/lib/: api.ts  atlas-data.ts  store.ts  utils.ts
apps/web/src/types/: atlas.ts
data/samples/: frankfurter_latest_usd.json
docs/: api_contract.md  architecture.md  data_dictionary.md  methodology.md
(+4 files in other folders)
