[project]
name = "atlasfx-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "numpy==2.4.6",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "scikit-learn==1.9.0",
    "uvicorn==0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]
